--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,15 @@
     <string name="app_name">MyContacts</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+	<string name="Unrecognizegesture">Unrecognize gesture!!</string>
+	<string name="startspeaking">Start Speaking!</string>
+	<string name="novoicedev">请安装google voice search后再试！</string>
+	<string name="done">Done</string>
+	<string name="cancel">Cancel</string>
+	<string name="newcontact">New Contact</string>
+	<string name="editcontact">Edit Contact</string>
+	<string name="deleteconfirm">Delete Confirm</string>
+	<string name="ok">ok</string>
+	<string name="nocontacts">No contacts</string>
 
 </resources>
